put state encode/decode to another thread

--- a/packages/redux_persist/pubspec.yaml
+++ b/packages/redux_persist/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   redux: ^5.0.0
   synchronized: ^3.0.0
   meta: ^1.3.0
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
   test: ^1.16.8
